<resources>
    <string name="app_name">MobileCollect</string>
    <string name="mapbox_auth_token">pk.eyJ1IjoiY25tYWlhIiwiYSI6ImNqNmhiamhhcjBnczYyeHJ5b2t1YjIxYzQifQ.yTIzil1soU0BL-J6v6FU2g</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_register">ou Registrar</string>
    <string name="error_invalid_email">Esse email é inválido</string>
    <string name="error_invalid_password">A senha é muito curta</string>
    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">Esse campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_failed">Usuário ou senha incorretos.</string>
    <string name="unknown_error">Ocorreu um erro não esperado.</string>

    <string name="map">Mapa</string>
    <string name="map_permission_needed">É necessário permissão de localização para utilizar os serviços com GPS.</string>
    <string name="map_info_connection_suspended">Location services suspended</string>
    <string name="map_error_connection_failed">Location services failed to connect</string>
    <string name="or">ou</string>
    <string name="action_sign_in_with_google">Log In Com Google</string>
    <string name="action_sign_out">Log Out</string>
    <string name="sign_in_with_google_failure_message">Erro no Google Play Services.</string>
    <string name="sign_in_internet_unavailable_failure_message">Não há conexão com a internet.</string>
    <string name="sign_in_with_email_failure_message">Usuário ou senha inválidos</string>
    <string name="label_sign_in">Log In</string>
    <string name="or_enter_in_you_account_info">ou com seu e-mail</string>
    <string name="developers_logo_tipo">Developers logo tipo</string>
    <string name="logo_da_aplica_o">Logo da aplicação</string>

    <string name="action_settings">Configurações</string>
    <string name="text_map">Mapa</string>
    <string name="text_ranking">Ranking</string>
    <string name="text_my_profile">Meu Perfil</string>
    <string name="action_label_profile">Perfil</string>
    <string name="action_label_ranking">Ranking</string>
    <string name="action_label_map">Mapa</string>

    <string name="collect_header_title">Coleta</string>
    <string name="collect_name_hint"><font size="14">Apelido</font></string>
    <string name="collect_lat_lng_hint">Latitude / Longitude</string>
    <string name="collect_classification_hint">Classificação</string>
    <string name="collect_team_hint">Time</string>
    <string name="collect_save_btn">Salvar</string>
    <string name="collect_lat_lng_text">%1$s / %2$s</string>
    <string name="collect_take_photo_btn">Tirar foto</string>
    <string name="collect_permission_needed">É necessário permissão da câmera e dos arquivos para coleta de ponto</string>
    <string name="collect_save_success">Ponto(s) sincronizado(s)</string>
    <string name="collect_save_registered">Ponto registrado</string>
    <string name="collect_save_error_no_user_auth">Não há usuário autenticado para coleta</string>
    <string name="collect_map_snapshot_description">Ponto sendo coletado</string>
    <string name="collect_classification_validation_error">A classificação é obrigatória!</string>
    <string name="collected_point_photo">Foto do ponto</string>

    <string name="classification_header_title">Classificação</string>

    <string name="profile_my_collects">Minhas Coletas</string>
    <string name="collect_photo_validation_error">É necessário tirar uma foto do local!</string>
    <string name="ranking_my_points">Meus pontos</string>
    <string name="message_snackbar_no_teams_available">Não há times disponíveis.</string>
    <string name="title_select_a_team">Selecione um time</string>
    <string name="message_time_no_informed">Time não informado</string>
    <string name="ranking_points_sufix">pts</string>
    <string name="title_team_leader_board">Team Leaderboard</string>
    <string name="user_points_hint">0</string>
    <string name="title_user_leader_board">Ranking Geral</string>
    <string name="no_results">Sem resultados</string>
    <string name="button_sign_out">Sair</string>
    <string name="button_change_password">Trocar Senha</string>
    <string name="button_download_offline_area">Baixar área offline (Petrópolis - BA)</string>
    <string name="dialog_title_reset_password">Reset Password</string>
    <string name="dialog_message_reset_password_with_success">Foi enviado um email para %1$s com instrução para reiniciar a senha.</string>
    <string name="message_snackbar_reset_password_request_error">Falhou. Tente novamente</string>
    <string name="dialog_message_reset_password_not_using_email_and_password">Você não está utilizando email e senha para se autenticar.</string>
    <string name="profile_subheader_title_user">User</string>
    <string name="profile_subheader_title_statistics">Estatísticas</string>
    <string name="profile_title_collects">Coletas</string>
    <string name="profile_title_ranking_points">Pontuação</string>
    <string name="profile_subheader_title_my_teams">Meus times</string>
    <string name="default_value_total_collects">0</string>
    <string name="default_message_user_not_participating_in_a_team">Você não pertence a nenhum time</string>
    <string name="message_snackbar_location_not_allowed">Não foi possível acessar sua localização</string>
    <string name="profile_default_user_email_address" />
    <string name="profile_default_user_score">0</string>
    <string name="profile_user_score_format">%1$spts</string>
    <string name="team_selection_internet_unavailable_message">A seleção de times só é possível quando há internet disponível.</string>
    <string name="button_text_remove_team_selected">X</string>
    <string name="edit_text_hint_collect_comments"><font size="14">Deixe um comentário sobre esta coleta</font></string>
    <string name="default_message_for_no_comments_for_this_collect"><font size="8">Não há comentário para esta coleta</font></string>
    <string name="default_message_for_no_name_for_this_collect" />
    <string name="profile_subheader_sync_status">Sincronização</string>
    <string name="default_message_user_all_data_synced">Todos os dados estão sincronizados.</string>
    <string name="profile_message_collects_to_sync">Falta(m) sincronizar %1d coletas.</string>
    <string name="button_sync_local_data">Sincronizar</string>
    <string name="profile_message_sync_with_success">Coletas sincronizadas com sucesso.</string>
    <string name="profile_message_sync_fail">Falha ao sincronizar as coletas.</string>
    <string name="profile_message_sync_no_networking_available">Não foi possível conectar com a internet. Tente novamente mais tarde.</string>
    <string name="manage_offline_map">Gerenciar mapa offline</string>
    <string name="manage_offline_map_header_title">Gerenciar mapa offline</string>
    <string name="select_offline_state_map_header_title">Selecione um estado</string>
    <string name="map_downloading_message">Baixando área do mapa… %.1f%%</string>
    <string name="map_downloaded_message">Download de área offline terminado com successo!</string>
    <string name="map_download_failure_message">Falha ao baixar área offline do mapa. Tente novamente mais tarde.</string>
    <string name="download_map_permission_needed">É necessário permissão da de escrita nos arquivos para download de área offline</string>
    <string name="message_download_offline_map_again">Falha ao carregar o mapa offline. Baixe novamente.</string>
</resources>
