<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.ecostage.mobilecollect.collect.CollectActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/collectMapImg"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                app:srcCompat="@mipmap/map_snapshot" />

            <EditText
                android:id="@+id/collectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/collect_name_hint"/>

            <EditText
                android:id="@+id/collectLatLng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/collect_lat_lng_hint"
                android:maxLines="1" />

            <EditText
                android:id="@+id/collectClassification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/collect_classification_hint"
                android:focusableInTouchMode="false"
                android:maxLines="1" />

            <EditText
                android:id="@+id/collectTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/collect_team_hint"
                android:maxLines="1" />

            <Button
                android:id="@+id/collectTakePhotoBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/collect_take_photo_btn" />

            <ImageView
                android:id="@+id/collectImage"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <Button
                android:id="@+id/collectSaveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/collect_save_btn" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
